--- a/crates/plonk-core/Cargo.toml
+++ b/crates/plonk-core/Cargo.toml
@@ -7,7 +7,8 @@ description = "UltraPlonk verifier for Noir proofs on Solana"
 
 [features]
 default = ["sha3"]
-debug = [] # Enable debug logging for challenge validation
+debug = [] # Enable debug logging for challenge validation (off-chain)
+debug-solana = [] # Enable debug challenge logging on Solana (verbose!)
 solana = [
     "solana-keccak-hasher",
     "solana-program",
