initial rust-sdk

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,25 @@ jobs:
         path: target
         key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
 
+    - name: Install Noir toolchain
+      run: |
+        curl -L https://raw.githubusercontent.com/noir-lang/noirup/main/install | bash
+        source $HOME/.nargo/env
+        noirup
+        echo "$HOME/.nargo/bin" >> $GITHUB_PATH
+
+    - name: Install Barretenberg CLI
+      run: |
+        curl -L https://raw.githubusercontent.com/AztecProtocol/aztec-packages/refs/heads/next/barretenberg/bbup/install | bash
+        source $HOME/.bb/env
+        bbup
+        echo "$HOME/.bb" >> $GITHUB_PATH
+
+    - name: Build test circuits
+      run: |
+        cd test-circuits
+        ./build_all.sh simple_square
+
     - name: Check formatting
       run: cargo fmt --all -- --check
 
