--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
         curl -L https://raw.githubusercontent.com/noir-lang/noirup/main/install | bash
         source $HOME/.bashrc || true
         export PATH="$HOME/.nargo/bin:$PATH"
-        noirup 1.0.0-beta.8
+        noirup -v 1.0.0-beta.8
         echo "$HOME/.nargo/bin" >> $GITHUB_PATH
 
     - name: Install Barretenberg CLI
