--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/example/solana-noir-verifier"
 
 [workspace.dependencies]
-# Solana (Anza SDK v3.x - Dec 2024)
+# Solana (Anza SDK v3.x)
 # BN254 syscalls active on mainnet since Solana 1.18
 solana-program = "3.0"
 solana-sdk = "3.0"
@@ -39,7 +39,7 @@ tokio = { version = "1", features = ["rt", "macros"] }
 
 [profile.release]
 overflow-checks = true
-lto = "fat"
+lto = false
 codegen-units = 1
 
 [profile.release.build-override]
