--- a/crates/rust-sdk/Cargo.toml
+++ b/crates/rust-sdk/Cargo.toml
@@ -4,9 +4,9 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
-description = "Rust SDK for verifying Noir UltraHonk proofs on Solana"
+description = "Rust SDK and CLI for verifying Noir UltraHonk proofs on Solana"
 keywords = ["solana", "noir", "zk-proof", "ultrahonk", "verification"]
-categories = ["cryptography", "blockchain"]
+categories = ["cryptography", "blockchain", "command-line-utilities"]
 
 [dependencies]
 # Solana
@@ -21,13 +21,31 @@ sha3 = { workspace = true }
 
 # Error handling
 thiserror = { workspace = true }
+anyhow = "1.0"
 
 # Logging
 log = "0.4"
+env_logger = "0.11"
+
+# CLI (optional, only for binary)
+clap = { version = "4.5", features = ["derive", "env"], optional = true }
+indicatif = { version = "0.17", optional = true }
+console = { version = "0.15", optional = true }
+dirs = { version = "5.0", optional = true }
+toml = { version = "0.8", optional = true }
+serde = { workspace = true, optional = true }
 
 [dev-dependencies]
 tokio = { workspace = true }
-env_logger = "0.11"
+
+[features]
+default = []
+cli = ["clap", "indicatif", "console", "dirs", "toml", "serde"]
+
+[[bin]]
+name = "noir-solana"
+path = "src/bin/noir-solana/main.rs"
+required-features = ["cli"]
 
 [[example]]
 name = "test_phased"
